--- a/docs/VnVPlan/VnVPlan.tex
+++ b/docs/VnVPlan/VnVPlan.tex
@@ -1729,19 +1729,45 @@ graduate attribute of Lifelong Learning.
 \input{../Reflection.tex}
 
 \begin{enumerate}
-  \item What went well while writing this deliverable? 
-  \item What pain points did you experience during this deliverable, and how
-    did you resolve them?
-  \item What knowledge and skills will the team collectively need to acquire to
-  successfully complete the verification and validation of your project?
-  Examples of possible knowledge and skills include dynamic testing knowledge,
-  static testing knowledge, specific tool usage, Valgrind etc.  You should look to
-  identify at least one item for each team member.
-  \item For each of the knowledge areas and skills identified in the previous
-  question, what are at least two approaches to acquiring the knowledge or
-  mastering the skill?  Of the identified approaches, which will each team
-  member pursue, and why did they make this choice?
-\end{enumerate}
+    \item What went well while writing this deliverable? 
+    \\
+    
+    While working on this deliverable, we found that several things went particularly well for our team. From the very beginning, we laid out a clear plan and divided the tasks based on each person's strengths, which made the workload manageable and played to our individual skills. Getting an early start was a game-changer; it allowed us ample time to really delve into each aspect without feeling rushed. We also benefited from having some spare time due to lighter workloads in our other courses, which we used to do deeper research on each topic. Revisiting our SRS and applying it to our VnV plan challenged us to think critically and solidified our understanding of the project. Our communication was smooth throughout---we checked in regularly and supported each other whenever questions or issues came up. Overall, the combination of good planning, effective collaboration, and the extra time we invested made the process both successful and satisfying.
+    
+    \item What pain points did you experience during this deliverable, and how
+      did you resolve them?
+      \\
+  
+      While working on this deliverable, we did face a few pain points that tested our teamwork and project management skills. One of the main challenges was investigating topics related to our project and tests that we hadn't openly discussed before; this led to some confusion and extra time spent getting everyone on the same page. Maintaining consistency across the entire document was also tricky---different writing styles and interpretations made parts of the doc feel uneven. We encountered build issues as well; some of us had to wait for others' pull requests to merge before we could proceed with our own work, which slowed down our progress. To tackle these problems, we discussed it during our meeting on Monday to openly discuss and clarify the unclear topics, ensuring everyone understood the direction we were heading. We also discussed that why working on documents is extremely important since it's worth a lot of our grade. Ensuring the deliverable met high standards despite any time pressures or setbacks is a key thing we discussed. By addressing these issues head-on, we were able to smooth out the rough patches and keep the project moving forward. \\
+      \smallskip
+      
+      
+    \item What knowledge and skills will the team collectively need to acquire to
+    successfully complete the verification and validation of your project?
+    Examples of possible knowledge and skills include dynamic testing knowledge,
+    static testing knowledge, specific tool usage, Valgrind etc.  You should look to
+    identify at least one item for each team member.\\
+  
+    To successfully verify and validate our project of processing high-definition satellite images for segmentation, our team needs to acquire a few specific skills. One team member plans to deepen his understanding of dynamic testing so he can effectively test his segmentation algorithms under various conditions. One of us will focus on static testing techniques, learning to use tools like Valgrind to identify and fix any code issues or inefficiencies. Another team member is going to get up to speed with image processing tools like OpenCV, which will be crucial for validating our segmentation results. The fourth member will work on performance profiling to ensure our application can handle large HD images smoothly without bogging down. We'll all need to become more familiar with handling and processing large satellite datasets, and possibly learn about machine learning model validation since we will be incorporating AI techniques for most part. By each of us focusing on these areas, we'll collectively cover all the bases needed for thorough verification and validation of our project.
+  
+  
+    \item For each of the knowledge areas and skills identified in the previous
+    question, what are at least two approaches to acquiring the knowledge or
+    mastering the skill?  Of the identified approaches, which will each team
+    member pursue, and why did they make this choice?\\
+  
+    This is the potential list of what each team member might be doing (subject to changes):
+  
+  \begin{itemize}
+      \item Kartik -- Dynamic Testing
+      \item Mathew -- Static Testing
+      \item Kyle -- OpenCV
+      \item Oleg -- Performance Profiling
+  \end{itemize}
+  
+  For dynamic testing, one of us considered enrolling in an online course or jumping straight into writing and running test cases on our code. We chose the hands-on route because some of us learn best by doing, and it lets us contribute directly to the project while improving our skills. The team member focusing on static testing and tools like Valgrind thought about attending a workshop or studying the documentation and applying it themselves. They decided to dive into the documentation and start using Valgrind on our code, preferring self-paced learning and immediate application. Our teammate working with OpenCV weighed taking a formal course versus following online tutorials and building small projects. They opted for the practical approach, believing that working on example projects would help them understand how to apply OpenCV to our needs more effectively. The fourth member, handling performance profiling, considered seeking guidance from a mentor or learning from online resources and applying them directly. They chose to start with online resources to quickly begin identifying and addressing performance issues in our application. Each of us picked the approach that aligns with our learning styles and allows us to make meaningful contributions to the project.
+    
+  \end{enumerate}
 
 \printbibliography % For biblatex
 
