--- a/docs/VnVPlan/VnVPlan.tex
+++ b/docs/VnVPlan/VnVPlan.tex
@@ -1223,7 +1223,7 @@ Their values are defined in this section for easy maintenance.
 % MIN\_ACTIONS\_WITH\_KEYBOARD & 95 & \% & Minimum percent of actions available with keyboard inputs \label{MIN_ACTIONS_WITH_KEYBOARD} \\ \hline
 % MIN\_ACCOUNT\_CREATION\_SUCCESS & 90 & \% & Minimum percent of accounts created successfully within 48 hours \label{MIN_ACCOUNT_CREATION_SUCCESS} \\ \hline
 % MIN\_REPORT\_RETURN & 90 & \% & Minimum percent of reports returned to customer within time frame \label{MIN_REPORT_RETURN} \\ \hline
-% MAX\_IMAGE\_DISPLAY\_TIME & 10 & \% & Maximum time to display image to labeller \label{MAX_IMAGE_DISPLAY_TIME} \\ \hline
+% MAX\_IMAGE\_DISPLAY\_TIME & 10 & Minutes & Maximum time to display image to labeller \label{MAX_IMAGE_DISPLAY_TIME} \\ \hline
 % MIN\_LABEL\_ACCURACY & 75 & \% & Minimum percent of label accuracy \label{MIN_LABEL_ACCURACY} \\ \hline
 % MIN\_UPTIME & 80 & \% & Minimum percent of system uptime \label{MIN_UPTIME} \\ \hline
 % ENERGY\_REDUCTION\_TARGET & 20 & \% & Minimum percent of achieved energy reduction \label{ENERGY_REDUCTION_TARGET} \\ \hline
