Small error with old name

--- a/docs/VnVPlan/VnVPlan.tex
+++ b/docs/VnVPlan/VnVPlan.tex
@@ -79,7 +79,7 @@ Please refer to Section 4 of Software Requirements Specification found \href{htt
 
 \pagenumbering{arabic}
 
-This document is intended to provide a description of the specific validation and verification activites that will be completed throughout the development of the GeoWeb System.
+This document is intended to provide a description of the specific validation and verification activites that will be completed throughout the development of the Orbit Watch System.
 The purpose of these activities is to ensure the system requirements agree with stakeholder needs, and to certify the implementation of the system satisifes the stakeholder requirements. This document will
 start with a review of the system, a description of the testing plan, and a list of tests to be completed.
 
