--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -759,12 +759,14 @@ The use case diagram depicted below identifies the boundaries between the users 
 \section{Look and Feel Requirements}
 \subsection{Appearance Requirements}
 \subsubsection*{NFR-LF0}
+\label{sec:LF0}
 \begin{itemize}
   \item \textbf{Description:} The application shall adapt to various screen sizes, ensuring legibility and an uncluttered layout.
   \item \textbf{Rationale:} Users will have computers with varying screen sizes, so a consistent experience across all these sizes is ideal.
   \item \textbf{Fit Criterion:} Visual elements must not exceed the boundaries of a screen with a size between the range 1024×768 pixels to 1920×1080 pixels.
 \end{itemize}
 \subsubsection*{NFR-LF1}
+\label{sec:LF1}
 \begin{itemize}
   \item \textbf{Description:} Interactive elements such as buttons shall provide visual feedback to the user.
   \item \textbf{Rationale:} This will allow users a better understanding of when their actions have been processed by the application.
@@ -772,6 +774,7 @@ The use case diagram depicted below identifies the boundaries between the users 
 \end{itemize}
 \subsection{Style Requirements}
 \subsubsection*{NFR-LF2}
+\label{sec:LF2}
 \begin{itemize}
   \item \textbf{Description:} The application should maintain a unified visual design across all components.
   \item \textbf{Rationale:} A consistent appearance enhances the application's cohesiveness and conveys a professional aesthetic.
@@ -785,12 +788,14 @@ The use case diagram depicted below identifies the boundaries between the users 
 
 
 \subsubsection*{NFR-UH0}
+\label{sec:UH0}
       \begin{itemize}
           \item \textbf{Description}: The platform will have a well-organized navigation menu, allowing users to quickly find labeling tasks, settings, help, and account details.  
           \item \textbf{Rationale}: An easy-to-navigate platform helps reduce the time taken for users to find what they need, improving the efficiency of labeling tasks and overall user satisfaction.  
           \item \textbf{Fit Criterion}: At least 90\% of users should be able to navigate to any main feature within 3 clicks, as determined by usability testing.
       \end{itemize}
-\subsubsection*{NFR-UH1} 
+\subsubsection*{NFR-UH1}
+\label{sec:UH1}
       \begin{itemize}
           \item \textbf{Description}: The platform’s buttons, forms, and other UI elements should follow a consistent style and behavior throughout, to ensure a predictable user experience.  
           \item \textbf{Rationale}: Consistency reduces cognitive load and helps users feel comfortable and confident when interacting with the system, as they can easily recognize and understand patterns in the UI.  
@@ -802,12 +807,14 @@ The use case diagram depicted below identifies the boundaries between the users 
 
 
 \subsubsection*{NFR-UH2} 
+\label{sec:UH2}
         \begin{itemize}
             \item \textbf{Description}: Users can set preferences to prioritize specific types of labeling tasks (e.g., agricultural, urban) and receive suggestions aligned with their interests and expertise.  
             \item \textbf{Rationale}: Allowing users to work on tasks of interest or within their expertise can improve task accuracy and user satisfaction, leading to better retention and data quality.  
             \item \textbf{Fit Criterion}: Users should be able to set their task preferences in their profile, with at least 80\% of their assigned tasks matching these preferences over time.
         \end{itemize}
         \subsubsection*{NFR-UH3} 
+        \label{sec:UH3}
         \begin{itemize}
             \item \textbf{Description}: The platform should display localized formats for date, time, and currency based on the user's location or preference settings.  
             \item \textbf{Rationale}: Displaying culturally familiar formats enhances user comfort and reduces errors when interpreting critical information like deadlines or earnings.  
@@ -819,12 +826,14 @@ The use case diagram depicted below identifies the boundaries between the users 
 
 
 \subsubsection*{NFR-UH4} 
+\label{sec:UH4}
         \begin{itemize} 
             \item \textbf{Description}: Users can track their progress through tutorials and training tasks within the platform, allowing them to see completed and pending learning modules.  
             \item \textbf{Rationale}: Tracking progress motivates users to complete learning tasks and helps them understand where they stand in terms of mastering platform features.  
             \item \textbf{Fit Criterion}: A progress tracker will be implemented, and at least 80\% of users should find it helpful, based on post-training feedback surveys.
         \end{itemize}
         \subsubsection*{NFR-UH5} 
+        \label{sec:UH5}
         \begin{itemize} 
             \item \textbf{Description}: Provide users with simulated labeling tasks to practice without affecting actual datasets, allowing them to learn through hands-on experience before starting real work.  
             \item \textbf{Rationale}: Practice tasks help users understand the labeling process without pressure, improving their confidence and accuracy before handling real data.  
@@ -836,12 +845,14 @@ The use case diagram depicted below identifies the boundaries between the users 
 
 
 \subsubsection*{NFR-UH6} 
+\label{sec:UH6}
         \begin{itemize} 
             \item \textbf{Description}: Contextual help pop-ups should be available throughout the platform, offering brief explanations for various features and guidance on how to complete tasks.  
             \item \textbf{Rationale}: Providing help exactly where users need it reduces confusion and makes it easier for users to understand how to use different parts of the platform without extensive searching.  
             \item \textbf{Fit Criterion}: At least 90\% of users should find the contextual help pop-ups clear and helpful during usability testing.
         \end{itemize}
         \subsubsection*{NFR-UH7} 
+        \label{sec:UH7}
         \begin{itemize} 
             \item \textbf{Description}: Error messages will not only indicate what went wrong but also provide actionable steps to resolve the issue in a friendly, non-blaming tone.  
             \item \textbf{Rationale}: Friendly and constructive error handling reduces user frustration and helps users quickly resolve issues without needing support, improving overall experience.  
@@ -853,12 +864,14 @@ The use case diagram depicted below identifies the boundaries between the users 
 
 
 \subsubsection*{NFR-UH8} 
+\label{sec:UH8}
         \begin{itemize} 
             \item \textbf{Description}: The platform will provide options for users to adjust text size and choose between different color themes (e.g., light, dark, high contrast) to improve readability based on their preferences.  
             \item \textbf{Rationale}: Allowing adjustments for visual elements helps users with low vision, color blindness, or different environmental lighting conditions to comfortably use the platform.  
             \item \textbf{Fit Criterion}: At least three different color themes will be available, and users should be able to increase text size up to 200\% without loss of content or functionality.
         \end{itemize}
         \subsubsection*{NFR-UH9} 
+        \label{sec:UH9}
         \begin{itemize} 
             \item \textbf{Description}: The platform will support keyboard shortcuts for essential actions (e.g., navigating between tasks, submitting labels) to facilitate quick access and improve usability for users who cannot use a mouse.  
             \item \textbf{Rationale}: Keyboard shortcuts provide an alternative way to interact with the system, improving efficiency for power users and ensuring accessibility for users with limited mobility.  
@@ -870,6 +883,7 @@ The use case diagram depicted below identifies the boundaries between the users 
 \section{Performance Requirements}
 \subsection{Speed and Latency Requirements}
 \subsubsection*{NFR-PR0}
+\label{sec:PR0}
 \begin{itemize}
   \item \textbf{Description:} The system shall process new user requests within 15 minutes of a Customer completing the account creation process 90\% of the time, and within 48 hours in all cases. 
   \item \textbf{Rationale:} The user likely has urgent needs if they are signing up to access the system. They must have quick access to the services offered by the system, and authentication is the first step of this process.
@@ -877,6 +891,7 @@ The use case diagram depicted below identifies the boundaries between the users 
 \end{itemize}
 
 \subsubsection*{NFR-PR1}
+\label{sec:PR1}
 \begin{itemize}
   \item \textbf{Description:} The system shall process new user requests within 15 minutes of a Labeler  completing the account creation process 90\% of the time, and within 48 hours in all cases. 
   \item \textbf{Rationale:} To improve engagement from Labelers, there should be minimal delay in getting started.
@@ -884,6 +899,7 @@ The use case diagram depicted below identifies the boundaries between the users 
 \end{itemize}
 
 \subsubsection*{NFR-PR2}
+\label{sec:PR2}
 \begin{itemize}
   \item \textbf{Description:} The system shall return a complete report of results to the Customer within the negotiated amount of time, 90\% of the time, and within 48 additional hours in all cases.
   \item \textbf{Rationale:} The user is expecting to be able to act on the insights the system provides. To build trust and loyalty, the system must ensure that it is meeting the agreed upon timelines.
@@ -892,6 +908,7 @@ The use case diagram depicted below identifies the boundaries between the users 
 \end{itemize}
 
 \subsubsection*{NFR-PR3}
+\label{sec:PR3}
 \begin{itemize}
   \item \textbf{Description:} The system shall take no longer than 10 seconds to display the next image to be labeled to a labeler, if there is one available.
   \item \textbf{Rationale:} To reduce friction for labelers, the system must ensure there is no unnecessary delay in preparing the next job. For users exposed to modern media, attention spans can be expected to be less than 10 seconds \href{https://profiletree.com/attention-span-crisis-digital-age-statistics/#:~:text=Studies%20have%20proven%20that%20being,focus%20after%208%20mere%20seconds}{src}.
@@ -901,6 +918,7 @@ The use case diagram depicted below identifies the boundaries between the users 
 \end{itemize}
 
 \subsubsection*{NFR-PR4}
+\label{sec:PR4}
 \begin{itemize}
   \item \textbf{Description:} The system shall deliver earned payouts to labelers within 7 business days of a request being made through the system.
   \item \textbf{Rationale:} The labelers are entitled to their earned income, and there must not be unnecessary delay. 7 days accounts for delays in the platform used to distribute payments.
@@ -911,6 +929,7 @@ The use case diagram depicted below identifies the boundaries between the users 
 N/A
 \subsection{Precision or Accuracy Requirements}
 \subsubsection*{NFR-PR5}
+\label{sec:PR5}
 \begin{itemize}
   \item \textbf{Description:} The system shall report accurate labels 75\% of the time.
   \item \textbf{Rationale:} Average data label accuracy for competitors is greater than 75\% (\href{https://www.researchgate.net/publication/234774537_Data_quality_from_crowdsourcing_A_study_of_annotation_selection_criteria#:~:text=Depending%20on%20the%20number%20of,%5B13%5D%20%5B14%5D%20.}{link}). The system should at a minimum provide the same label accuracy.
@@ -922,6 +941,7 @@ N/A
 \end{itemize}
 \subsection{Robustness or Fault-Tolerance Requirements}
 \subsubsection*{NFR-PR6}
+\label{sec:PR6}
 \begin{itemize}
   \item \textbf{Description:} The system shall have 97\% uptime. 
   \item \textbf{Rationale:} It is crucial that in emergency response use cases, the system is able to accept and process requests with minimal delay.
@@ -931,12 +951,14 @@ N/A
 \end{itemize}
 \subsection{Capacity Requirements}
 \subsubsection*{NFR-PR7}
+\label{sec:PR7}
 \begin{itemize}
   \item \textbf{Description:} The system shall have the capacity to support enough labelers to meet all service request deadlines.
   \item \textbf{Rationale:} This requirement is critical to satisfy NFR-PR2.
   \item \textbf{Fit Criterion:} See NFR-PR2.
 \end{itemize}
 \subsubsection*{NFR-PR8}
+\label{sec:PR8}
 \begin{itemize}
   \item \textbf{Description:} The system shall have the capacity to store and process large image files.
   \item \textbf{Rationale:} This requirement is necessary to obtain information from satelite images, which can be several gigabites in size.
@@ -944,6 +966,7 @@ N/A
 \end{itemize}
 \subsection{Scalability or Extensibility Requirements}
 \subsubsection*{NFR-PR9}
+\label{sec:PR9}
 \begin{itemize}
   \item \textbf{Description:} The system shall be able to scale to meet the capacity specified in NFR-PR7.
   \item \textbf{Rationale:} This requirement is critical to satisfy NFR-PR7.
@@ -959,6 +982,7 @@ N/A
 \subsection{Wider Environment Requirements}
 % \subsubsection{Sustainability}
 \subsubsection*{NFR-OE0}
+\label{sec:OE0}
 \begin{itemize}
   \item \textbf{Description:} The system shall implement energy-efficient practices in cloud usage and server management.
   \item \textbf{Rationale:} Minimizes the platform’s carbon footprint and promotes sustainability.
@@ -966,30 +990,35 @@ N/A
 \end{itemize}
 \subsection{Requirements for Interfacing with Adjacent Systems}
 \subsubsection*{NFR-OE1}
+\label{sec:OE1}
 \begin{itemize}
   \item \textbf{Description:} The system shall support standardized APIs and data formats for the automatic acquisition and integration of satellite images from third-party providers.
   \item \textbf{Rationale:} Facilitates seamless integration and efficient data handling from satellite data providers.
   \item \textbf{Fit Criterion:} The platform can successfully ingest data from at least two major satellite data providers using their APIs without manual intervention.
 \end{itemize}
 \subsubsection*{NFR-OE2}
+\label{sec:OE2}
 \begin{itemize}
   \item \textbf{Description:} The system shall integrate with reliable and secure payment processors to handle user compensations and client payments efficiently.
   \item \textbf{Rationale:} Ensures secure and efficient financial transactions, building trust with users and clients.
   \item \textbf{Fit Criterion:} Transactions are processed securely through integrated payment gateways, achieving a transaction success rate of 99.5%.
 \end{itemize}
 \subsubsection*{NFR-OE3}
+\label{sec:OE3}
 \begin{itemize}
   \item \textbf{Description:} The system shall support multiple currencies to accommodate a global user base and international clients.
   \item \textbf{Rationale:} Enhances the platform’s accessibility and usability for users and clients worldwide.
   \item \textbf{Fit Criterion:} The platform supports at least four major currencies (e.g., USD, EUR, GBP, INR) and correctly processes transactions in each.
 \end{itemize}
 \subsubsection*{NFR-OE4}
+\label{sec:OE4}
 \begin{itemize}
   \item \textbf{Description:} The system shall be compatible with popular machine learning frameworks to facilitate the training, testing, and deployment of computer vision models.
   \item \textbf{Rationale:} Enables efficient development and integration of ML models for various use cases.
   \item \textbf{Fit Criterion:} The platform can train and deploy models using frameworks like TensorFlow, PyTorch, and scikit-learn without compatibility issues.
 \end{itemize}
 \subsubsection*{NFR-OE5}
+\label{sec:OE5}
 \begin{itemize}
   \item \textbf{Description:} The system shall have efficient data pipelines for transferring labeled datasets between the platform and ML models.
   \item \textbf{Rationale:} Ensures smooth and automated workflows for data handling and model training.
@@ -997,6 +1026,7 @@ N/A
 \end{itemize}
 \subsection{Productization Requirements}
 \subsubsection*{NFR-OE6}
+\label{sec:OE6}
 \begin{itemize}
   \item \textbf{Description:} The system shall be accessible without requiring any installation, operating solely through web browsers.
   \item \textbf{Rationale:} Eliminates the need for users to install software, reducing barriers to entry and simplifying access.
@@ -1004,18 +1034,21 @@ N/A
 \end{itemize}
 \subsection{Release Requirements}
 \subsubsection*{NFR-OE7}
+\label{sec:OE7}
 \begin{itemize}
   \item \textbf{Description:} The system shall include a detailed release roadmap outlining timelines, features, and milestones for upcoming releases.
   \item \textbf{Rationale:} Keeps the development team and stakeholders aligned and ensures organized progress.
   \item \textbf{Fit Criterion:} The release roadmap is documented, updated regularly, and adhered to with at least 80\% of milestones achieved on schedule.
 \end{itemize}
 \subsubsection*{NFR-OE8}
+\label{sec:OE8}
 \begin{itemize}
   \item \textbf{Description:} The system shall conduct beta testing with a select group of users to gather feedback, identify bugs, and refine features before full-scale deployment.
   \item \textbf{Rationale:} Ensures the platform meets user expectations and operates smoothly upon official release.
   \item \textbf{Fit Criterion:} Beta testing results in fewer than 10 critical bugs and includes actionable feedback from at least 50 beta users, leading to necessary iterative improvements.
 \end{itemize}
 \subsubsection*{NFR-OE9}
+\label{sec:OE9}
 \begin{itemize}
   \item \textbf{Description:} Each release shall maintain the functionality of existing features without introducing regressions.
   \item \textbf{Rationale:} Ensures continuity and reliability of the platform by preventing new updates from disrupting or breaking previously working features, thereby maintaining user trust and satisfaction.
@@ -1026,6 +1059,7 @@ N/A
 \section{Maintainability and Support Requirements}
 \subsection{Maintenance Requirements}
 \subsubsection*{NFR-MR0}
+\label{sec:MR0}
 \begin{itemize}
   \item \textbf{Description:} All maintainance required for the system shall be possible to complete by a competent software developer after reading all of the documentation provided in the source repository.
   \item \textbf{Rationale:} The system should be well documented, and therefore maintainable after reading said documents.
@@ -1040,18 +1074,21 @@ N/A
 \section{Security Requirements}
 \subsection{Access Requirements}
 \subsubsection*{NFR-SE0}
+\label{sec:SE0}
 \begin{itemize}
   \item \textbf{Description:} The application shall only allow users with labeling access, including labellers, customers, and admins, to view active projects and label images.
   \item \textbf{Rationale:} We do not want random users with no stake in the process to effect the results.
   \item \textbf{Fit Criterion:} Users who have not logged in to the application have no way of viewing projects or labeling images. Users logged in as labellers, customers, or admins have access to these features.
 \end{itemize}
 \subsubsection*{NFR-SE1}
+\label{sec:SE1}
 \begin{itemize}
   \item \textbf{Description:} The application shall only allow users with customer access and above to create new image analysis projects.
   \item \textbf{Rationale:} Unidentified users creating projects would be impossible to facilitate. Also, labellers have no need to access project creation. 
   \item \textbf{Fit Criterion:} Users who have not logged in to the application have no way of creating an image analysis project. Users logged in as customers or admins have access to these features.
 \end{itemize}
 \subsubsection*{NFR-SE2}
+\label{sec:SE2}
 \begin{itemize}
   \item \textbf{Description:} The application shall validate the email format the user provides when creating an account.
   \item \textbf{Rationale:} We do not want users using invalid or duplicate emails to sign up.
@@ -1060,6 +1097,7 @@ N/A
   $\text{New email} \in V \land \text{New email} \neg \in \text{Registered Emails}$
 \end{itemize}
 \subsubsection*{NFR-SE3}
+\label{sec:SE3}
 \begin{itemize}
   \item \textbf{Description:} The application shall validate the password format the user provides when creating an account.
   \item \textbf{Rationale:} We do not want users using weak passwords to sign up.
@@ -1067,6 +1105,7 @@ N/A
   V = $(\forall\; password \in P\;  |\; password \; matches \; the \; pattern \; $(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[\#\$\%\&\*\@])[a-zA-Z0-9\#\$\%\&\*\@]\{8,\})\\
 \end{itemize}
 \subsubsection*{NFR-SE4}
+\label{sec:SE4}
 \begin{itemize}
   \item \textbf{Description:} The system shall, during system failure, notify users trying to make a request of the system failure.
   \item \textbf{Rationale:} The system should provide good warning messages to users to prevent additional frustration.
@@ -1074,18 +1113,21 @@ N/A
 \end{itemize}
 \subsection{Integrity Requirements}
 \subsubsection*{NFR-SE5}
+\label{sec:SE5}
 \begin{itemize}
   \item \textbf{Description:} The application shall prevent incorrect data from being introduced.
   \item \textbf{Rationale:} The database of information should always reflect correct and up to date information.
   \item \textbf{Fit Criterion:} The system must validate user inputs for data accuracy and format before they are saved. Any invalid data must trigger error messages, preventing it from being entered into the database. Users must be required to correct errors before proceeding.
 \end{itemize}
 \subsubsection*{NFR-SE6}
+\label{sec:SE6}
 \begin{itemize}
   \item \textbf{Description:} The application shall prohibit new user actions when user is disconnected from the system.
   \item \textbf{Rationale:} The system should avoid batch updates upon reconnect as to prevent malicious users creating a false package of updates.
   \item \textbf{Fit Criterion:} Upon user disconnect and reconnect, the system will not accept any updates from the user not submitted before the disconnect occured.
 \end{itemize}
 \subsubsection*{NFR-SE7}
+\label{sec:SE7}
 \begin{itemize}
   \item \textbf{Description:} The system shall reject duplicate entries in database.
   \item \textbf{Rationale:} Each entry to the database should be a unique data piece. If two entries are identical, they must differ by at least the creation time.
@@ -1093,12 +1135,14 @@ N/A
 \end{itemize}
 \subsection{Privacy Requirements}
 \subsubsection*{NFR-SE8}
+\label{sec:SE8}
 \begin{itemize}
   \item \textbf{Description:} User data will be securely encrypted to protect user’s privacy.
   \item \textbf{Rationale:} This will help to avoid user's being compromised if a data leak occurs.
   \item \textbf{Fit Criterion:} An encryption algorithm is used on sensitive user data such as passwords.
 \end{itemize}
 \subsubsection*{NFR-SE9}
+\label{sec:SE9}
 \begin{itemize}
   \item \textbf{Description:} The application shall ensure that all payment transactions are processed securely using encryption and comply with relevant security standards, such as PCI-DSS, which helps to protect payment account data (PCI Security Standards Council, 2024).
   \item \textbf{Rationale:} Protecting users' financial information is critical to maintaining trust. Failing to secure payments can lead to data breaches, financial loss, and legal liabilities.
@@ -1109,6 +1153,7 @@ N/A
 N/A
 \subsection{Immunity Requirements}
 \subsubsection*{NFR-SE10}
+\label{sec:SE10}
 \begin{itemize}
   \item \textbf{Description:} The application shall use parameterized queries or prepared statements for all database interactions.
   \item \textbf{Rationale:} We want to prevent SQL injection attacks which can lead to unauthorized data access or manipulation.
@@ -1118,6 +1163,7 @@ N/A
 \section{Cultural Requirements}
 \subsection{Cultural Requirements}
 \subsubsection*{NFR-CU0}
+\label{sec:CU0}
 \begin{itemize}
   \item \textbf{Description:} The system shall present users with the option to select the most popular language in each country it is deployed in.
   \item \textbf{Rationale:} It is important that the users of the program can understand what is said in each step.
@@ -1127,18 +1173,21 @@ N/A
 \section{Compliance Requirements}
 \subsection{Legal Requirements}
 \subsubsection*{NFR-CO0}
+\label{sec:CO0}
 \begin{itemize}
   \item \textbf{Description:} The system shall not be available in any country currently facing economic sanctions by the Government of Canada.
   \item \textbf{Rationale:} Legal requirement to operate.
   \item \textbf{Fit Criterion:} Website must not be reachable in sanctioned countries. Canadian sanctions are outlined in the following legislation: \href{http://laws-lois.justice.gc.ca/eng/acts/U-2/index.html}{United Nation Act}, \href{http://laws-lois.justice.gc.ca/eng/acts/S-14.5/index.html}{Special Economic Measures Act}, and \href{http://laws.justice.gc.ca/eng/acts/J-2.3/}{Justice for Victims of Corrupt Foreign Officials Act}
 \end{itemize}
 \subsubsection*{NFR-CO1}
+\label{sec:CO1}
 \begin{itemize}
   \item \textbf{Description:} The system shall follow Canadian tax code when accepting and paying out earnings.
   \item \textbf{Rationale:} Legal requirement to operate.
   \item \textbf{Fit Criterion:} All relevant tax codes must be satisfied when accepting payment from Customers or paying out earnings to Labelers. Specifically \href{https://www.ontario.ca/laws/statute/90c40}{Ontario Tax Act, 1990} and \href{https://laws-lois.justice.gc.ca/eng/acts/i-3.3/}{Income Tax Act 1985}
 \end{itemize}
 \subsubsection*{NFR-CO2}
+\label{sec:CO2}
 \begin{itemize}
   \item \textbf{Description:} The system shall allow Customers to restrict Labelers from certain regions from labeling the images related to their service request.
   \item \textbf{Rationale:} Customers may be uploading sensitive images, which are inappropriate for international Labelers to view.
@@ -1348,18 +1397,21 @@ A detailed budget forecast will be developed, encompassing all the aforementione
 \subsection{User Documentation Requirements}
 
         \subsubsection*{NFR-UD0} 
+        \label{sec:UD0}
         \begin{itemize} 
             \item \textbf{Description}: A built-in help system with a searchable knowledge base, FAQs, tutorial videos, user forums and step-by-step guides to assist users with common issues or tasks directly within the platform.  
             \item \textbf{Rationale}: An online help system provides quick, on-demand support, improving user experience by minimizing interruptions when seeking assistance.  
             \item \textbf{Fit Criterion}: At least 80\% of users should be able to resolve their issues using the help system without contacting support, as validated by user surveys and support metrics.
         \end{itemize}
-        \subsubsection*{NFR-UD1}   
+        \subsubsection*{NFR-UD1}
+        \label{sec:UD1}
         \begin{itemize} 
             \item \textbf{Description}: A condensed guide offering a quick overview of key platform features and essential workflows to get users started rapidly.  
             \item \textbf{Rationale}: A quick start guide enables new users to become productive immediately without needing to read extensive documentation, improving their onboarding experience.  
             \item \textbf{Fit Criterion}: At least 80\% of new users should report the quick start guide as helpful, and they should be able to complete a basic labeling task within 15 minutes of using it.
         \end{itemize}
-        \subsubsection*{NFR-UD2} 
+        \subsubsection*{NFR-UD2}
+        \label{sec:UD2}
         \begin{itemize} 
             \item \textbf{Description}: Provide contextual help directly within the platform, such as tooltips and small info pop-ups, offering real-time guidance for features or form fields as users interact with them.  
             \item \textbf{Rationale}: In-app help reduces the learning curve and provides timely support without requiring users to leave the page or workflow they are on.  
@@ -1370,13 +1422,15 @@ A detailed budget forecast will be developed, encompassing all the aforementione
 \subsection{Training Requirement}
 
 
-\subsubsection*{NFR-TR0} 
+\subsubsection*{NFR-TR0}
+        \label{sec:TR0}
         \begin{itemize} 
             \item \textbf{Description}: An onboarding tutorial guiding users through key platform functions interactively, offering tooltips and prompts to familiarize them with core workflows.  
             \item \textbf{Rationale}: Interactive onboarding accelerates learning, reduces user frustration, and ensures that new users can quickly perform tasks confidently.  
             \item \textbf{Fit Criterion}: At least 85\% of users should complete the onboarding tutorial successfully within 20 minutes, with a 80\% rate of positive feedback on its effectiveness.
         \end{itemize}
-        \subsubsection*{NFR-TR1} 
+        \subsubsection*{NFR-TR1}
+        \label{sec:TR1}
         \begin{itemize} 
             \item \textbf{Description}: A sandbox environment allowing users to practice labeling tasks without affecting live data, including quizzes and exercises to assess understanding and improve skills.  
             \item \textbf{Rationale}: A practice environment enables users to build confidence and hone their skills in a low-pressure setting, ensuring they are prepared for real tasks.  
